update Server API
