# src/routes/ServerRoute.ts
@@ -6,8 +6,9 @@ import authMiddleware from '../middleware/AuthMiddleware';
 const router = express.Router();
 
 
-router.post('/', authMiddleware ,ServerController.createServer
-);
+router.post('', authMiddleware ,ServerController.createServer);
+router.get("/:id", authMiddleware, ServerController.getServerById)
+router.get('',authMiddleware,ServerController.getServers )
 
 
 export default router;
